--- a/FitPass/WebContent/css/index.css
+++ b/FitPass/WebContent/css/index.css
@@ -2,3 +2,10 @@ div.container {
     justify-content: center;
     align-items: center;
 }
+
+td.logoTableData {
+    min-width: 7.5%;
+    max-width: 7.5%;
+    justify-content: center;
+    align-items: center;
+}
