--- a/FitPass/WebContent/css/index.css
+++ b/FitPass/WebContent/css/index.css
@@ -3,6 +3,10 @@ div.container {
     align-items: center;
 }
 
+#navbarSupportedContent > button.btn {
+    margin-left: 10px;
+}
+
 td.logoTableData {
     min-width: 7.5%;
     max-width: 7.5%;
