--- a/FitPass/WebContent/css/login.css
+++ b/FitPass/WebContent/css/login.css
@@ -1,6 +1,9 @@
 div.container {
 	justify-content: center;
 	align-items: center;
+	min-width: 50vw;
+	max-width: 50vw;
+	min-height: 100%;
 }
 
 form {
