--- a/FitPass/WebContent/css/user-profile.css
+++ b/FitPass/WebContent/css/user-profile.css
@@ -5,6 +5,7 @@
 div.container {
     justify-content: center;
     align-items: center;
+    min-width: 50vw;
     max-width: 50vw;
     min-height: 100%;
 }
